@@ -10,6 +10,7 @@ Unreleased : ImpressCMS 1.0 "Janus" Beta 2
 - Fixed : #1876797 the $tpl XoopsTpl object used in htdocs/cp_functions.php and htdocs/admin.php had a too generic name which was creating conflict (with AltSys for example). The variable name was renamed for $icsmAdminTpl (malanciault)
 - Fixed : #1875382 error in xoops.css (display: inline-block) (MacDonald/malanciault)
 - Fixed : #1881367 Problems in the queries executed when editing User Ranks (malanciault/vaughan)
+- Fixed : Adding a few @ in install/page_pathsettings.php to prevent the display of some errors that would confuse users (rplima/malanciault)
 
 
 ========================================
